plugins {
    id 'java-library'
    id "jacoco"
}

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

jacoco {
    toolVersion = '0.8.11'
}
jacocoTestReport {
    reports {
        xml.required = true
    }
}

test {
    finalizedBy jacocoTestReport 
}

dependencies {
    implementation group: 'org.sonarsource.sslr', name: 'sslr-toolkit', version: '1.24.0.633'
    runtimeOnly group: 'ch.qos.logback', name: 'logback-classic', version: '1.5.17'
    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.26.3'
    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
    implementation project(":perl-frontend")
}
